--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,7 +14,8 @@
     <!--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />-->
     <style>
       html {
-        overscroll-behavior: none;
+        overflow-y: auto;
+        overscroll-behavior-y: none;
       }
     </style>
   </head>
