タイトルページに画像を追加

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="">
     <meta name="keywords" content="Three.js,JavaScript,Babel,React,FPS,game,demo">
     <title>Three.js製FPSゲーム デモ</title>
+    <link rel="icon" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap"
 />
-    <!--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />-->
     <style>
       html {
         overflow-y: auto;
