--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="keywords" content="Three.js,JavaScript,Babel,React,FPS,game,demo">
-    <title>Three.js製FPSゲーム デモ</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="icon" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
